@@ -108,6 +108,8 @@ max restart is again 0.
 scip v 8.0.3
 --- 25 jan full ---
 back to scip v 8.0.2
+--- 26 jan base full ---
+Conditional compilation in mipcomp.sh
 
 TODOs
 
